--- a/frontend/app/templates/components/forms/signup-form.hbs
+++ b/frontend/app/templates/components/forms/signup-form.hbs
@@ -24,7 +24,7 @@
                         <i class="lock icon"></i>
                         {{input type="password" id="pwd1" value=password name="password" placeholder="Password"}}
                         <button type="button" id="eye1" {{action 'show1'}}>
-                            <img src="https://raw.githubusercontent.com/fossasia/badgeyay/development/frontend/public/images/eye-16.png" alt="eye">
+                            <img src="https://github.com/fossasia/badgeyay/development/frontend/public/images/eye-16.png" alt="eye">
                         </button>
                     </div>
                 </div>
@@ -33,7 +33,7 @@
                         <i class="lock icon"></i>
                         {{input type="password" id="pwd2" name="password_repeat" placeholder="Re-enter Password"}}
                         <button type="button" id="eye2" {{action 'show2'}}>
-                            <img src="https://raw.githubusercontent.com/fossasia/badgeyay/development/frontend/public/images/eye-16.png" alt="eye">
+                            <img src="https://github.com/fossasia/badgeyay/development/frontend/public/images/eye-16.png" alt="eye">
                         </button>
                     </div>
                 </div>
