--- a/frontend/app/templates/components/forms/login-form.hbs
+++ b/frontend/app/templates/components/forms/login-form.hbs
@@ -20,7 +20,7 @@
                 <i class="lock icon"></i>
                 {{input type="password" id="pwd" name='password' placeholder='Password' value=password}}
                 <button type="button" id="eye" {{ action 'show1'}}>
-                  <img src="https://raw.githubusercontent.com/fossasia/badgeyay/development/frontend/public/images/eye-16.png" alt="eye">
+                  <img src="https://github.com/fossasia/badgeyay/development/frontend/public/images/eye-16.png" alt="eye">
                 </button>
               </div>
             </div>
