Adds example input in enter details
Adds example input in enter details section for reference to users

Fixes #1766

--- a/frontend/app/templates/components/data-component/text-component.hbs
+++ b/frontend/app/templates/components/data-component/text-component.hbs
@@ -1,5 +1,6 @@
 <div class="field">
     <label>Enter details</label>
     {{textarea name="data" rows="3" value=formData}}
+    <label>Enter details of format <strong>Dominic, Del Piero, Social Media Manager, FOSSASIA, @dompiero07</strong></label>
 </div>
 
