Fix-1783 Signup Successful notification incase password are different

--- a/frontend/app/templates/components/forms/signup-form.hbs
+++ b/frontend/app/templates/components/forms/signup-form.hbs
@@ -28,7 +28,7 @@
             <div class="field required">
                 <div class="ui left icon input">
                     <i class="lock icon"></i>
-                    {{input type="password" name="password_repeat" placeholder="Re-enter Password"}}
+                    {{input type="password" value=password_repeat name="password_repeat" placeholder="Re-enter Password"}}
                 </div>
             </div>
             <div class="ui center aligned segment basic">
