--- a/frontend/app/templates/components/forms/signup-form.hbs
+++ b/frontend/app/templates/components/forms/signup-form.hbs
@@ -22,30 +22,34 @@
                 <div class="field required">
                     <div class="ui left icon input">
                         <i class="lock icon"></i>
-                        {{input type="password" id="pwd1" value=password name="password" placeholder="Password"}}
-                        <button type="button" id="eye1" {{action 'show1'}}>
-                            <img src="https://github.com/fossasia/badgeyay/development/frontend/public/images/eye-16.png" alt="eye">
-                        </button>
+                        {{input type="password" id="pwd" value=password name="password" placeholder="Password"}}
+                        <div class="ui small basic icon buttons">
+                            <button class="ui button" id="eye1" {{ action 'showPasswordSignup'}}>
+                                <i class="eye icon"></i>
+                            </button>
+                        </div>
                     </div>
                 </div>
                 <div class="field required">
                     <div class="ui left icon input">
                         <i class="lock icon"></i>
-                        {{input type="password" id="pwd2" name="password_repeat" placeholder="Re-enter Password"}}
-                        <button type="button" id="eye2" {{action 'show2'}}>
-                            <img src="https://github.com/fossasia/badgeyay/development/frontend/public/images/eye-16.png" alt="eye">
-                        </button>
+                        {{input type="password" id="pwdConfirm" name="password_repeat" placeholder="Re-enter Password"}}
+                        <div class="ui small basic icon buttons">
+                            <button class="ui button" id="eye2" {{ action 'showPasswordSignupConfirm'}}>
+                                <i class="eye icon"></i>
+                            </button>
+                        </div>
                     </div>
-                </div>
-                <div class="ui center aligned segment basic">
-                    <button class="ui fluid large submit orange basic button" style="margin-bottom: 10px;" type="submit">
-                        Sign Up
-                    </button>
-                    <div class="ending-border"></div>
-                    <div class="div-links">
-                        <a href="{{href-to 'login'}}" class="ui center aligned text muted weight-800 links">
-                            Already a user? Log in
-                        </a>
+                    <div class="ui center aligned segment basic">
+                        <button class="ui fluid large submit orange basic button" style="margin-bottom: 10px;" type="submit">
+                            Sign Up
+                        </button>
+                        <div class="ending-border"></div>
+                        <div class="div-links">
+                            <a href="{{href-to 'login'}}" class="ui center aligned text muted weight-800 links">
+                                Already a user? Log in
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
