Recrop Icon Changed from Trash to Crop

--- a/frontend/app/templates/components/forms/image-upload.hbs
+++ b/frontend/app/templates/components/forms/image-upload.hbs
@@ -6,7 +6,7 @@
     <div class="ui bottom attached buttons">
       {{#if needsCropper}}
         <div class="ui teal button" {{action 'reCrop'}}>
-          <i class="trash icon"></i>
+          <i class="crop icon"></i>
           Re-crop
         </div>
       {{/if}}
