Fix -1781 Password Strength Feature

--- a/frontend/app/styles/partials/signup.scss
+++ b/frontend/app/styles/partials/signup.scss
@@ -47,3 +47,25 @@ $colorwhite: #ffffff;
     margin-top: 50px;
   }
 }
+
+meter {
+  margin: 0 auto 1em;
+  width: 100%;
+  height: 0.5em;
+  background: none;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+meter::-webkit-meter-bar {
+  background: none;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+meter[value="1"]::-webkit-meter-optimum-value { background: red; }
+meter[value="2"]::-webkit-meter-optimum-value { background: yellow; }
+meter[value="3"]::-webkit-meter-optimum-value { background: orange; }
+meter[value="4"]::-webkit-meter-optimum-value { background: green; }
+
+meter[value="1"]::-moz-meter-bar { background: red; }
+meter[value="2"]::-moz-meter-bar { background: yellow; }
+meter[value="3"]::-moz-meter-bar { background: orange; }
+meter[value="4"]::-moz-meter-bar { background: green; }
