Implement FAQ sections
FAQ sections have been implemented for users.

Fixes #1787

--- a/frontend/app/templates/components/footer-main.hbs
+++ b/frontend/app/templates/components/footer-main.hbs
@@ -4,6 +4,9 @@
             {{#link-to 'sitemap' class='item'}}
                 {{init-cap 'sitemap'}}
             {{/link-to}}
+            {{#link-to 'faq' class='item'}}
+                {{init-cap 'faq'}}
+            {{/link-to}}
         </div>
         <div class="right menu">
             <strong class="item">Follow us on</strong>
