--- a/frontend/app/templates/faq.hbs
+++ b/frontend/app/templates/faq.hbs
@@ -31,7 +31,11 @@
         <div class="ui aligned segment">
             <h1>What file formats do you support?</h1>
             <h5>
-                We support .csv files only, or you may enter your data manually in the csv format.
+                We accept data in the following formats
+                <ul>
+                    <li>.csv file</li>
+                    <li>Manual data entry</li>
+                </ul>
             </h5>
         </div>
     </div>
@@ -39,7 +43,16 @@
         <div class="ui aligned segment">
             <h1>How to use the badge editor?</h1>
             <h5>
-
+                There are 5 steps of badge creation
+                <ul>
+                    <li>Name your badges</li>
+                    <li>Specify the input sources as either upload CSV or Enter details</li>
+                    <li>
+                        Select the paper size and the badge sizes
+                    </li>
+                    <li>Select the background Sources</li>
+                    <li>Select the font customizations</li>
+                </ul>
             </h5>
         </div>
     </div>
