Add bottom margin to the badges option

--- a/frontend/app/templates/components/background-component/def-image-component.hbs
+++ b/frontend/app/templates/components/background-component/def-image-component.hbs
@@ -20,7 +20,7 @@
                     </div>
                 {{/each}}
             {{else}}
-                <div style="margin-left: 10px;" class="gallery">
+                <div class="gallery">
                     <div class="ui stackable grid">
                         {{#each defImages as |image|}}
                             <div data-value="{{image.id}}" class="item">
@@ -33,3 +33,4 @@
         </div>
     {{/ui-dropdown}}
 </div>
+
