Add 6 character limit on password

--- a/frontend/app/templates/components/forms/signup-form.hbs
+++ b/frontend/app/templates/components/forms/signup-form.hbs
@@ -29,6 +29,7 @@
                             </button>
                         </div>
                     </div>
+                    <small id="feedback"></small>
                     <meter  id="password-strength-meter"  value={{level}} ></meter>
                 </div>
                 <div class="field required">
@@ -42,7 +43,7 @@
                         </div>
                     </div>
                     <div class="ui center aligned segment basic">
-                        <button class="ui fluid large submit orange basic button" style="margin-bottom: 10px;" type="submit">
+                        <button disabled id="signUpSubmit" class="ui fluid large submit orange basic button" style="margin-bottom: 10px;" type="submit">
                             Sign Up
                         </button>
                         <div class="ending-border"></div>
