--- a/frontend/app/templates/components/forms/signup-form.hbs
+++ b/frontend/app/templates/components/forms/signup-form.hbs
@@ -29,11 +29,12 @@
                             </button>
                         </div>
                     </div>
+                    <meter  id="password-strength-meter"  value={{level}} ></meter>
                 </div>
                 <div class="field required">
                     <div class="ui left icon input">
                         <i class="lock icon"></i>
-                        {{input type="password" id="pwdConfirm" name="password_repeat" placeholder="Re-enter Password"}}
+                        {{input type="password" id="pwdConfirm" value=password_repeat name="password_repeat" placeholder="Re-enter Password"}}
                         <div class="ui small basic icon buttons">
                             <button class="ui button" id="eye2" {{ action 'showPasswordSignupConfirm'}}>
                                 <i class="eye icon"></i>
