Profile Picture and options should be in center for smaller screens. #1819

--- a/frontend/app/styles/partials/my-profile.scss
+++ b/frontend/app/styles/partials/my-profile.scss
@@ -48,3 +48,15 @@
   position: relative;
 }
 
+.ui.basic.aligned.segment {
+  margin:auto;
+}
+
+.ui.secondary.vertical.menu {
+  margin:auto;
+}
+
+.ui.circular.image.profile-image {
+  margin:auto;
+}
+
