Added show/hide password button in Settings page
Added the show/hide password button on the settings page for enter
password and verify password

Fixes #1815

--- a/frontend/app/templates/components/user-component/user-password.hbs
+++ b/frontend/app/templates/components/user-component/user-password.hbs
@@ -1,22 +1,28 @@
 <h2 class="ui header">Password</h2>
 <h5 class="ui dividing header">Change your password.</h5>
-<form class="ui {{if isLoading 'loading'}} form" {{action 'updateUserPassword' on="submit"}}>
+<form class="ui {{if isLoading 'loading'}} form" {{action 'updateUserPassword' on="submit" }}>
     <div class="field">
         <label>New Password</label>
-            <div class="fields">
-                <div class="ten wide field">
-                    {{input type="password" id="newPassword" name=newPassword}}
-                </div>
-            </div>
-    </div>
-    <div class="field">
-    <label>Verify Password</label>
-        <div class="fields">
-            <div class="ten wide field">
-                {{input type="password" id="newPasswordVerify" name=newPasswordVerify placeholder="Re-enter Password"}}
+        <div class="fields ten wide">
+            {{input type="password" id="newPassword" name=newPassword}}
+            <div class="ui small basic icon buttons">
+                <button class="ui button" id="eye" {{ action 'showPasswordSettings'}}>
+                    <i class="eye icon"></i>
+                </button>
             </div>
         </div>
     </div>
+    <div class="field">
+        <label>Verify Password</label>
+            <div class="ten wide fields">
+                {{input type="password" id="newPasswordVerify" name=newPasswordVerify placeholder="Re-enter Password"}}
+                <div class="ui small basic icon buttons">
+                    <button class="ui button" id="eye" {{ action 'showPasswordSettingsVerify'}}>
+                        <i class="eye icon"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
     <button type="submit" class="ui basic orange button" tabindex="0">
         Save Changes
     </button>
