--- a/frontend/app/templates/components/forms/login-form.hbs
+++ b/frontend/app/templates/components/forms/login-form.hbs
@@ -21,7 +21,7 @@
                 {{input type="password" id="pwd" name='password' placeholder='Password' value=password}}
                 <div class="ui small basic icon buttons">
                   <button class="ui button" id="eye" {{ action 'showPasswordLogin'}}>
-                    <i class="eye icon"></i>
+                    <i class="eye slash icon"></i>
                   </button>
                 </div>
               </div>
