--- a/frontend/app/templates/components/forms/signup-form.hbs
+++ b/frontend/app/templates/components/forms/signup-form.hbs
@@ -25,7 +25,7 @@
                         {{input type="password" id="pwd" value=password name="password" placeholder="Password"}}
                         <div class="ui small basic icon buttons">
                             <button class="ui button" id="eye1" {{ action 'showPasswordSignup'}}>
-                                <i class="eye icon"></i>
+                                <i class="eye slash icon"></i>
                             </button>
                         </div>
                     </div>
@@ -36,7 +36,7 @@
                         {{input type="password" id="pwdConfirm" name="password_repeat" placeholder="Re-enter Password"}}
                         <div class="ui small basic icon buttons">
                             <button class="ui button" id="eye2" {{ action 'showPasswordSignupConfirm'}}>
-                                <i class="eye icon"></i>
+                                <i class="eye slash icon"></i>
                             </button>
                         </div>
                     </div>
