--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -11,7 +11,7 @@
 {{/create-badge}}
 <div class="ui stackable mobile reversed grid">
     <div class="{{if previewToggled 'ten' 'sixteen'}} wide column">
-        <div class="main-container create-badge segments">
+        <div class="create-badge segments">
             <div class="ui clearing segment">
                 <div class="ui form width-container">
                     <div>
@@ -93,7 +93,7 @@
 
                     </div>
                 </div>
-            </div>    
+            </div>
             <div class="ui clearing segment">
                 <div class="ui form width-container">
                     <p>
