--- a/frontend/app/templates/components/user-component/preview.hbs
+++ b/frontend/app/templates/components/user-component/preview.hbs
@@ -7,36 +7,44 @@
         background-image: {{if defImage "url('/images/badge_backgrounds/"}}{{if defImage defImageName}}{{if defImage fingerPrint}}{{if defImage ".png');"}}
             {{if custImage 'url('}}{{if custImage backImg}}{{if custImage ');'}}">
         <div class="preview content" style="padding-top: {{if previewHeight '150' '200'}}px">
+            <div class="ui grid">
+                <div class="ten wide column">
             <p
-            style="
+            style="color: #{{defColor}};
             font-size : {{rel font_fn}}px;
             font-family : {{defFont}};">
             {{fn}}
             </p>
             <p
-            style="
+            style="color: #{{defColor}};
             font-size : {{rel font_ln}}px;
             font-family : {{defFont}};">
             {{ln}}
             </p>
             <p
-            style="
+            style="color: #{{defColor}};
             font-size : {{rel font_desg}}px;
             font-family : {{defFont}};">
             {{desg}}
             </p>
             <p
-            style="
+            style="color: #{{defColor}};
             font-size : {{rel font_org}}px;
             font-family : {{defFont}};">
             {{org}}
             </p>
             <p
-            style="
+            style="color: #{{defColor}};
             font-size : {{rel font_sh}}px;
             font-family : {{defFont}};">
             {{sh}}
             </p>
+            </div>
+            <div class="six wide column">
+                {{qr-code data=fn height=150 width=150}}
+            </div>
+                    </div>
+
         </div>
-    </div>
+ </div>
 </div>
