Fix-1785 Adding Option to Simultaneously download multiple badges

--- a/frontend/app/styles/partials/my-badges.scss
+++ b/frontend/app/styles/partials/my-badges.scss
@@ -1,3 +1,4 @@
+
 .ui.segment {
   margin: 1%;
 
@@ -22,3 +23,13 @@
 .pencil {
   width: 180px;
 }
+.checkbox { 
+  position: absolute; 
+  top: 0px; 
+  right: 0px;
+  zoom:2; }
+
+.image {
+   position: relative;  
+  }
+
