Site map options are visible upon login
The options which were not earlier visible upon login have now been corrected

Fixes #1806

--- a/frontend/app/templates/sitemap.hbs
+++ b/frontend/app/templates/sitemap.hbs
@@ -32,7 +32,7 @@
             {{/link-to}}
             <br>
             {{#if session.isAuthenticated}}
-              {{#link-to 'my-profile' class='links'}}
+              {{#link-to 'settings' class='links'}}
                     {{init-cap 'view profile'}}
                 {{/link-to}}
             {{else}}
@@ -43,7 +43,7 @@
         </div>
     </div>
     <div class='ui section divider'>
-
+        
     </div>
     <div class='three column row'>
         <div class='column'>
