--- a/frontend/app/templates/components/text-component/font-size.hbs
+++ b/frontend/app/templates/components/text-component/font-size.hbs
@@ -4,17 +4,10 @@
 <div class="ui stackable grid">
   <div class="four column row">
     <div class="center aligned column labels">Field</div>
-    <div class="center aligned column labels">Font<br>
-      <div class="ui checkbox">
-        {{input name="fonttypeall" type="checkbox" checked=fonttypeall}}
-        <label>Apply to all</label>
-      </div>
+    <div class="center aligned column labels">Font
     </div>
-    <div class="center aligned column">Font Size (in pixels)<br>
-      <div class="ui checkbox">
-        {{input name="fontsizeall" type="checkbox" checked=fontsizeall}}
-        <label>Apply to all</label>
-      </div>
+    <div class="center aligned column">Font Size (in pixels)
+      <br>
     </div>
     <div class="center aligned column">Adjust long content to width automatically</div>
   </div>
@@ -23,19 +16,19 @@
     <div class="center aligned column labels">First Name</div>
     <div class="center aligned column font_type">
       <div class="one wide column">
-        {{#ui-dropdown class="selection" selected="Bob"  onChange=(action (mut fonttype1))}}
-          <div class="default text">Helvetica</div>
-          <i class="dropdown icon"></i>
-          <div class="menu">
-              <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
-              <div class="item" data-item="sans" style="font-family:'sans'">Sans</div>
-              <div class="item" data-item="Courier-Bold" style="font-family:'Courier-Bold'">Courier</div>
-              <div class="item" data-item="Helvetica" style="font-family:'Helvetica'">Helvetica</div>
-              <div class="item" data-item="Times-Bold" style="font-family:'Times-Bold'">Times-Bold</div>
-              <div class="item" data-item="monospace" style="font-family:'monospace'">Mono Space</div>
-              <div class="item" data-item="Times-Roman" style="font-family:'Times-Roman'">Times-Roman</div>
-              <div class="item" data-item="Courier 10 Pitch" style="font-family:'Courier 10 Pitch'">Courier 10 Pitch</div>
-          </div>
+        {{#ui-dropdown class="selection" selected="Bob" onChange=(action (mut fonttype1))}}
+        <div class="default text">Helvetica</div>
+        <i class="dropdown icon"></i>
+        <div class="menu">
+          <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
+          <div class="item" data-item="sans" style="font-family:'sans'">Sans</div>
+          <div class="item" data-item="Courier-Bold" style="font-family:'Courier-Bold'">Courier</div>
+          <div class="item" data-item="Helvetica" style="font-family:'Helvetica'">Helvetica</div>
+          <div class="item" data-item="Times-Bold" style="font-family:'Times-Bold'">Times-Bold</div>
+          <div class="item" data-item="monospace" style="font-family:'monospace'">Mono Space</div>
+          <div class="item" data-item="Times-Roman" style="font-family:'Times-Roman'">Times-Roman</div>
+          <div class="item" data-item="Courier 10 Pitch" style="font-family:'Courier 10 Pitch'">Courier 10 Pitch</div>
+        </div>
         {{/ui-dropdown}}
       </div>
     </div>
@@ -71,18 +64,18 @@
     <div class="center aligned column font_type">
       <div class="one wide column">
         {{#ui-dropdown class="selection" selected="Bob" onChange=(action (mut fonttype2))}}
-          <div class="default text">Helvetica</div>
-          <i class="dropdown icon"></i>
-          <div class="menu">
-              <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
-              <div class="item" data-item="sans" style="font-family:'sans'">Sans</div>
-              <div class="item" data-item="Courier-Bold" style="font-family:'Courier-Bold'">Courier</div>
-              <div class="item" data-item="Helvetica" style="font-family:'Helvetica'">Helvetica</div>
-              <div class="item" data-item="Times-Bold" style="font-family:'Times-Bold'">Times-Bold</div>
-              <div class="item" data-item="monospace" style="font-family:'monospace'">Mono Space</div>
-              <div class="item" data-item="Times-Roman" style="font-family:'Times-Roman'">Times-Roman</div>
-              <div class="item" data-item="Courier 10 Pitch" style="font-family:'Courier 10 Pitch'">Courier 10 Pitch</div>
-          </div>
+        <div class="default text">Helvetica</div>
+        <i class="dropdown icon"></i>
+        <div class="menu">
+          <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
+          <div class="item" data-item="sans" style="font-family:'sans'">Sans</div>
+          <div class="item" data-item="Courier-Bold" style="font-family:'Courier-Bold'">Courier</div>
+          <div class="item" data-item="Helvetica" style="font-family:'Helvetica'">Helvetica</div>
+          <div class="item" data-item="Times-Bold" style="font-family:'Times-Bold'">Times-Bold</div>
+          <div class="item" data-item="monospace" style="font-family:'monospace'">Mono Space</div>
+          <div class="item" data-item="Times-Roman" style="font-family:'Times-Roman'">Times-Roman</div>
+          <div class="item" data-item="Courier 10 Pitch" style="font-family:'Courier 10 Pitch'">Courier 10 Pitch</div>
+        </div>
         {{/ui-dropdown}}
       </div>
     </div>
@@ -106,9 +99,11 @@
       </div>
     </div>
     <div class="center aligned column">
-      <div class="ui toggle checkbox">
-        <input name="public" type="checkbox" checked="checked">
-        <label></label>
+      <div class="one wide column">
+        <div class="ui toggle checkbox">
+          <input name="public" type="checkbox" checked="checked">
+          <label></label>
+        </div>
       </div>
     </div>
   </div>
@@ -118,18 +113,18 @@
     <div class="center aligned column font_type">
       <div class="one wide column">
         {{#ui-dropdown class="selection" selected="Bob" onChange=(action (mut fonttype3))}}
-          <div class="default text">Helvetica</div>
-          <i class="dropdown icon"></i>
-          <div class="menu">
-              <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
-              <div class="item" data-item="sans" style="font-family:'sans'">Sans</div>
-              <div class="item" data-item="Courier-Bold" style="font-family:'Courier-Bold'">Courier</div>
-              <div class="item" data-item="Helvetica" style="font-family:'Helvetica'">Helvetica</div>
-              <div class="item" data-item="Times-Bold" style="font-family:'Times-Bold'">Times-Bold</div>
-              <div class="item" data-item="monospace" style="font-family:'monospace'">Mono Space</div>
-              <div class="item" data-item="Times-Roman" style="font-family:'Times-Roman'">Times-Roman</div>
-              <div class="item" data-item="Courier 10 Pitch" style="font-family:'Courier 10 Pitch'">Courier 10 Pitch</div>
-          </div>
+        <div class="default text">Helvetica</div>
+        <i class="dropdown icon"></i>
+        <div class="menu">
+          <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
+          <div class="item" data-item="sans" style="font-family:'sans'">Sans</div>
+          <div class="item" data-item="Courier-Bold" style="font-family:'Courier-Bold'">Courier</div>
+          <div class="item" data-item="Helvetica" style="font-family:'Helvetica'">Helvetica</div>
+          <div class="item" data-item="Times-Bold" style="font-family:'Times-Bold'">Times-Bold</div>
+          <div class="item" data-item="monospace" style="font-family:'monospace'">Mono Space</div>
+          <div class="item" data-item="Times-Roman" style="font-family:'Times-Roman'">Times-Roman</div>
+          <div class="item" data-item="Courier 10 Pitch" style="font-family:'Courier 10 Pitch'">Courier 10 Pitch</div>
+        </div>
         {{/ui-dropdown}}
       </div>
     </div>
@@ -165,18 +160,18 @@
     <div class="center aligned column font_type">
       <div class="one wide column">
         {{#ui-dropdown class="selection" selected="Bob" onChange=(action (mut fonttype4))}}
-          <div class="default text">Helvetica</div>
-          <i class="dropdown icon"></i>
-          <div class="menu">
-              <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
-              <div class="item" data-item="sans" style="font-family:'sans'">Sans</div>
-              <div class="item" data-item="Courier-Bold" style="font-family:'Courier-Bold'">Courier</div>
-              <div class="item" data-item="Helvetica" style="font-family:'Helvetica'">Helvetica</div>
-              <div class="item" data-item="Times-Bold" style="font-family:'Times-Bold'">Times-Bold</div>
-              <div class="item" data-item="monospace" style="font-family:'monospace'">Mono Space</div>
-              <div class="item" data-item="Times-Roman" style="font-family:'Times-Roman'">Times-Roman</div>
-              <div class="item" data-item="Courier 10 Pitch" style="font-family:'Courier 10 Pitch'">Courier 10 Pitch</div>
-          </div>
+        <div class="default text">Helvetica</div>
+        <i class="dropdown icon"></i>
+        <div class="menu">
+          <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
+          <div class="item" data-item="sans" style="font-family:'sans'">Sans</div>
+          <div class="item" data-item="Courier-Bold" style="font-family:'Courier-Bold'">Courier</div>
+          <div class="item" data-item="Helvetica" style="font-family:'Helvetica'">Helvetica</div>
+          <div class="item" data-item="Times-Bold" style="font-family:'Times-Bold'">Times-Bold</div>
+          <div class="item" data-item="monospace" style="font-family:'monospace'">Mono Space</div>
+          <div class="item" data-item="Times-Roman" style="font-family:'Times-Roman'">Times-Roman</div>
+          <div class="item" data-item="Courier 10 Pitch" style="font-family:'Courier 10 Pitch'">Courier 10 Pitch</div>
+        </div>
         {{/ui-dropdown}}
       </div>
     </div>
@@ -212,20 +207,26 @@
     <div class="center aligned column font_type">
       <div class="one wide column">
         {{#ui-dropdown class="selection" selected="Bob" onChange=(action (mut fonttype5))}}
-          <div class="default text">Helvetica</div>
-          <i class="dropdown icon"></i>
-          <div class="menu">
-              <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
-              <div class="item" data-item="sans" style="font-family:'sans'">Sans</div>
-              <div class="item" data-item="Courier-Bold" style="font-family:'Courier-Bold'">Courier</div>
-              <div class="item" data-item="Helvetica" style="font-family:'Helvetica'">Helvetica</div>
-              <div class="item" data-item="Times-Bold" style="font-family:'Times-Bold'">Times-Bold</div>
-              <div class="item" data-item="monospace" style="font-family:'monospace'">Mono Space</div>
-              <div class="item" data-item="Times-Roman" style="font-family:'Times-Roman'">Times-Roman</div>
-              <div class="item" data-item="Courier 10 Pitch" style="font-family:'Courier 10 Pitch'">Courier 10 Pitch</div>
-          </div>
+        <div class="default text">Helvetica</div>
+        <i class="dropdown icon"></i>
+        <div class="menu">
+          <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
+          <div class="item" data-item="sans" style="font-family:'sans'">Sans</div>
+          <div class="item" data-item="Courier-Bold" style="font-family:'Courier-Bold'">Courier</div>
+          <div class="item" data-item="Helvetica" style="font-family:'Helvetica'">Helvetica</div>
+          <div class="item" data-item="Times-Bold" style="font-family:'Times-Bold'">Times-Bold</div>
+          <div class="item" data-item="monospace" style="font-family:'monospace'">Mono Space</div>
+          <div class="item" data-item="Times-Roman" style="font-family:'Times-Roman'">Times-Roman</div>
+          <div class="item" data-item="Courier 10 Pitch" style="font-family:'Courier 10 Pitch'">Courier 10 Pitch</div>
+        </div>
         {{/ui-dropdown}}
       </div>
+      <br>
+      <div class="ui checkbox">
+        {{input name="fonttypeall" type="checkbox" checked=fonttypeall}}
+        <label>Apply font type to all</label>
+      </div>
+      <br>
     </div>
     <div class="center aligned column">
       <div class="one wide cloumn">
@@ -245,6 +246,12 @@
         </div>
         {{/ui-dropdown}}
       </div>
+      <br>
+      <div class="ui checkbox">
+        {{input name="fontsizeall" type="checkbox" checked=fontsizeall}}
+        <label>Apply font size to all</label>
+      </div>
+      <br>
     </div>
     <div class="center aligned column">
       <div class="ui toggle checkbox">
